[package]
name = "pipei"
version = "0.1.7"
edition = "2024"
    description = "Point-free (no closures) multi-argument pipe and tap for better control flow."
keywords = ["functional", "pipe", "tap", "no_std", "control-flow"]
license = "MIT OR Apache-2.0"

[dependencies]
pipei_macros = { version = "0.1.1", optional = true }
paste = "1"

[features]
default = ["0","1","2","3","4","5"]
up_to_5   = ["0","1","2","3","4","5"]
up_to_10  = ["0","1","2","3","4","5","6","7","8","9","10"]
up_to_15  = ["0","1","2","3","4","5","6","7","8","9","10","11","12","13","14","15"]
up_to_20  = ["0","1","2","3","4","5","6","7","8","9","10","11","12","13","14","15","16","17","18","19","20"]
up_to_25  = ["0","1","2","3","4","5","6","7","8","9","10","11","12","13","14","15","16","17","18","19","20","21","22","23","24","25"]
up_to_30  = ["0","2","1","3","4","5","6","7","8","9","10","11","12","13","14","15","16","17","18","19","20","21","22","23","24","25","26","27","28","29","30"]


"0" = []
"1" = ["dep:pipei_macros"]
"2" = ["dep:pipei_macros"]
"3" = ["dep:pipei_macros"]
"4" = ["dep:pipei_macros"]
"5" = ["dep:pipei_macros"]
"6" = ["dep:pipei_macros"]
"7" = ["dep:pipei_macros"]
"8" = ["dep:pipei_macros"]
"9" = ["dep:pipei_macros"]
"10" = ["dep:pipei_macros"]
"11" = ["dep:pipei_macros"]
"12" = ["dep:pipei_macros"]
"13" = ["dep:pipei_macros"]
"14" = ["dep:pipei_macros"]
"15" = ["dep:pipei_macros"]
"16" = ["dep:pipei_macros"]
"17" = ["dep:pipei_macros"]
"18" = ["dep:pipei_macros"]
"19" = ["dep:pipei_macros"]
"20" = ["dep:pipei_macros"]
"21" = ["dep:pipei_macros"]
"22" = ["dep:pipei_macros"]
"23" = ["dep:pipei_macros"]
"24" = ["dep:pipei_macros"]
"25" = ["dep:pipei_macros"]
"26" = ["dep:pipei_macros"]
"27" = ["dep:pipei_macros"]
"28" = ["dep:pipei_macros"]
"29" = ["dep:pipei_macros"]
"30" = ["dep:pipei_macros"]
"31" = ["dep:pipei_macros"]
"32" = ["dep:pipei_macros"]
"33" = ["dep:pipei_macros"]
"34" = ["dep:pipei_macros"]
"35" = ["dep:pipei_macros"]
"36" = ["dep:pipei_macros"]
"37" = ["dep:pipei_macros"]
"38" = ["dep:pipei_macros"]
"39" = ["dep:pipei_macros"]
"40" = ["dep:pipei_macros"]
"41" = ["dep:pipei_macros"]
"42" = ["dep:pipei_macros"]
"43" = ["dep:pipei_macros"]
"44" = ["dep:pipei_macros"]
"45" = ["dep:pipei_macros"]
"46" = ["dep:pipei_macros"]
"47" = ["dep:pipei_macros"]
"48" = ["dep:pipei_macros"]
"49" = ["dep:pipei_macros"]
"50" = ["dep:pipei_macros"]
"51" = ["dep:pipei_macros"]
"52" = ["dep:pipei_macros"]
"53" = ["dep:pipei_macros"]
"54" = ["dep:pipei_macros"]
"55" = ["dep:pipei_macros"]
"56" = ["dep:pipei_macros"]
"57" = ["dep:pipei_macros"]
"58" = ["dep:pipei_macros"]
"59" = ["dep:pipei_macros"]
"60" = ["dep:pipei_macros"]
"61" = ["dep:pipei_macros"]
"62" = ["dep:pipei_macros"]
"63" = ["dep:pipei_macros"]
"64" = ["dep:pipei_macros"]
"65" = ["dep:pipei_macros"]
"66" = ["dep:pipei_macros"]
"67" = ["dep:pipei_macros"]
"68" = ["dep:pipei_macros"]
"69" = ["dep:pipei_macros"]
"70" = ["dep:pipei_macros"]
"71" = ["dep:pipei_macros"]
"72" = ["dep:pipei_macros"]
"73" = ["dep:pipei_macros"]
"74" = ["dep:pipei_macros"]
"75" = ["dep:pipei_macros"]
"76" = ["dep:pipei_macros"]
"77" = ["dep:pipei_macros"]
"78" = ["dep:pipei_macros"]
"79" = ["dep:pipei_macros"]
"80" = ["dep:pipei_macros"]
"81" = ["dep:pipei_macros"]
"82" = ["dep:pipei_macros"]
"83" = ["dep:pipei_macros"]
"84" = ["dep:pipei_macros"]
"85" = ["dep:pipei_macros"]
"86" = ["dep:pipei_macros"]
"87" = ["dep:pipei_macros"]
"88" = ["dep:pipei_macros"]
"89" = ["dep:pipei_macros"]
"90" = ["dep:pipei_macros"]
"91" = ["dep:pipei_macros"]
"92" = ["dep:pipei_macros"]
"93" = ["dep:pipei_macros"]
"94" = ["dep:pipei_macros"]
"95" = ["dep:pipei_macros"]
"96" = ["dep:pipei_macros"]
"97" = ["dep:pipei_macros"]
"98" = ["dep:pipei_macros"]
"99" = ["dep:pipei_macros"]
"100" = ["dep:pipei_macros"]
