[package]
name = "pipei"
version = "0.2.4"
edition = "2024"
    description = "Generalized pipe and tap for multi-argument function chaining."
keywords = ["functional", "pipe", "tap", "no_std", "chaining"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Glar35/pipei"
documentation = "https://docs.rs/pipei"

[dependencies]

[features]
default = ["up_to_5"]

up_to_5   = ["0","1","2","3","4","5"]
up_to_10  = ["up_to_5","6","7","8","9","10"]
up_to_15  = ["up_to_10","11","12","13","14","15"]
up_to_20  = ["up_to_15","16","17","18","19","20"]
up_to_25  = ["up_to_20","21","22","23","24","25"]
up_to_30  = ["up_to_25","26","27","28","29","30"]
up_to_35  = ["up_to_30","31","32","33","34","35"]
up_to_40  = ["up_to_35","36","37","38","39","40"]
up_to_45  = ["up_to_40","41","42","43","44","45"]
up_to_50  = ["up_to_45","46","47","48","49","50"]

"0" = []
"1" = []
"2" = []
"3" = []
"4" = []
"5" = []
"6" = []
"7" = []
"8" = []
"9" = []
"10" = []
"11" = []
"12" = []
"13" = []
"14" = []
"15" = []
"16" = []
"17" = []
"18" = []
"19" = []
"20" = []
"21" = []
"22" = []
"23" = []
"24" = []
"25" = []
"26" = []
"27" = []
"28" = []
"29" = []
"30" = []
"31" = []
"32" = []
"33" = []
"34" = []
"35" = []
"36" = []
"37" = []
"38" = []
"39" = []
"40" = []
"41" = []
"42" = []
"43" = []
"44" = []
"45" = []
"46" = []
"47" = []
"48" = []
"49" = []
"50" = []